--- a/templates/index.html
+++ b/templates/index.html
@@ -60,14 +60,14 @@
         }
     </style>
 </head>
-<body>
+<body data-new-gr-c-s-loaded="14.1162.0" spellcheck="false">
+  <form action="/generate" method="post">
     <div class="container">
         <div class="user-box">
             <h3>你的對話</h3>
-
             <textarea name="prompt" placeholder="輸入你的訊息..."></textarea>
-	    <p style="text-align: center;"><button type="submit">發送</button></p>
-
+	    <p style="text-align: center;"><button type="submit">generate</button></p>
+  </form>
         </div>
         <div class="scammer-box">
             <h3>詐騙 AI</h3>
@@ -79,6 +79,5 @@
    		<p>{% endif %}</p></div>
         </div>
     </div>
-
 </body>
 </html>
